--- a/client/src/components/PageHeaderIcon/styles.module.css
+++ b/client/src/components/PageHeaderIcon/styles.module.css
@@ -2,7 +2,7 @@
     width: 85px;
     height: 85px;
     border-radius: 10px;
-    background-color: #1ED760;
+    background-color: #ffb300;
 }
 
 .page_header_icon__inner {
