--- a/client/src/pages/UserLogin/styles.module.css
+++ b/client/src/pages/UserLogin/styles.module.css
@@ -1,13 +1,13 @@
-.signup_container {
-	width: 100%;
-	min-height: 100vh;
+.login_container {
+	width: calc(100% - 64px);
+	min-height: calc(100vh - 128px);
 	background-color: #ffffff;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
-.signup_form_container {
+.login_form_container {
 	width: 900px;
 	height: 500px;
 	display: flex;
@@ -17,32 +17,14 @@
 }
 
 .left {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	background-color: #1ED760;
-	border-top-left-radius: 10px;
-	border-bottom-left-radius: 10px;
-}
-
-.left h1 {
-	margin-top: 0;
-	color: white;
-	font-size: 35px;
-	align-self: center;
-}
-
-.right {
 	flex: 2;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	background-color: white;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
 
 .form_container {
@@ -78,6 +60,25 @@
 	text-align: center;
 }
 
+.right {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: #ffb300;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
+.right h1 {
+	margin-top: 0;
+	color: white;
+	font-size: 40px;
+	align-self: center;
+	text-align: center;
+}
+
 .white_btn,
 .green_btn {
 	border: none;
@@ -92,7 +93,7 @@
 }
 
 .green_btn {
-	background-color: #1ED760;
+	background-color: #ffb300;
 	color: white;
 	margin: 10px;
 }
