--- a/client/src/components/Appbar/styles.module.css
+++ b/client/src/components/Appbar/styles.module.css
@@ -9,11 +9,11 @@ body {
     left: 0px;
     right: 0px;
     height: 48px;
-    width: calc(100vw - 16px);
+    width: 100%;
     padding-top: 8px;
-    padding-right: 8px;
+    padding-right: 0px;
     padding-bottom: 8px;
-    padding-left: 8px;
+    padding-left: 0px;
     background-color: #ffffff;
 }
 
